adapt form for netlify2

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 				<form
 					name="contact"
 					method="POST"
-					data-netlify="true">
+					netifly>
 					<i class="fa-solid fa-envelope prefix"></i>
 					<input
 						type="text"
