adapt form for netlify2

--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@
 					<input
 						type="text"
 						name="email"
-						placeholder="Votre Email" />
+						placeholder="Votre Email"
+						value="contact" />
+
 					<button type="submit">
 						<i class="fa-solid fa-paper-plane postfix"></i>
 					</button>
