adapt form for netlify2

--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
 					<input
 						type="text"
 						name="email"
-						placeholder="Votre Email"
-						value="contact" />
+						placeholder="Votre Email" />
 
 					<button type="submit">
 						<i class="fa-solid fa-paper-plane postfix"></i>
