--- a/index.html
+++ b/index.html
@@ -265,13 +265,12 @@
 				<form
 					name="contact"
 					method="POST"
-					netifly>
+					data-netlify="true">
 					<i class="fa-solid fa-envelope prefix"></i>
 					<input
 						type="text"
 						name="email"
 						placeholder="Votre Email" />
-
 					<button type="submit">
 						<i class="fa-solid fa-paper-plane postfix"></i>
 					</button>
