--- a/index.html
+++ b/index.html
@@ -26,41 +26,40 @@
 		<link
 			rel="stylesheet"
 			href="/css/style.css" />
-		<title>CV - Erwan</title>
+		<title>CV - Pierre</title>
 	</head>
 	<body>
 		<div class="grid-container">
 			<header>
-				<h1><span>E</span>rwan Vallée</h1>
+				<h1><span>P</span>ierre Rousseau</h1>
+				<p>Logistique - Gestion de stock</p>
 				<p>Intégrateur HTML & CSS</p>
 			</header>
 			<section class="picture">
 				<img
-					src="https://dyma-images.s3.fr-par.scw.cloud/html-css/projects/project4/erwan.jpg"
+					src="/img/IMG_2684 (1).jpeg"
 					alt="photo" />
 			</section>
 			<aside>
 				<div class="block">
 					<h2 class="title-small">CONTACT</h2>
 					<h3>Téléphone</h3>
-					<p>0499/91.51.56</p>
+					<p>0499 / 91 . 51 . 56</p>
 					<h3>Email</h3>
-					<p>erwan.valle@gmail.com</p>
+					<p>rousseau.pierresimon@gmail.com</p>
 					<h3>Adresse</h3>
 					<p>
-						17 rue du moulin <br />
-						5447 Tilman
+						Clos des sources 16 <br />
+						4130 Tilff
 					</p>
 				</div>
 				<div class="block">
 					<h2 class="title-small">EDUCATION</h2>
-					<h3>DYMA</h3>
+					<h3>Bachelier en Marketing</h3>
 					<p>
-						Dyma.fr <br />
-						2022 - 2024
+						Haute école de la province de Liège <br />
+						2004 - 2007
 					</p>
-					<h3>Email</h3>
-					<p>erwan.valle@gmail.com</p>
 				</div>
 				<div class="block">
 					<h2 class="title-small">SKILLS</h2>
@@ -70,6 +69,34 @@
 						<div class="bar-skill-dot"></div>
 					</div>
 					<h3>SCSS</h3>
+					<div class="bar-skill">
+						<div class="bar-skill-progress"></div>
+						<div class="bar-skill-dot"></div>
+					</div>
+					<h3>Business Central</h3>
+					<div class="bar-skill">
+						<div class="bar-skill-progress"></div>
+						<div class="bar-skill-dot"></div>
+					</div>
+					<h3>SAP</h3>
+					<div class="bar-skill">
+						<div class="bar-skill-progress"></div>
+						<div class="bar-skill-dot"></div>
+					</div>
+					<h3>EASI</h3>
+					<div class="bar-skill">
+						<div class="bar-skill-progress"></div>
+						<div class="bar-skill-dot"></div>
+					</div>
+				</div>
+				<div class="block">
+					<h2 class="title-small">SOFT-SKILLS</h2>
+					<h3>MANAGEMENT</h3>
+					<div class="bar-skill">
+						<div class="bar-skill-progress"></div>
+						<div class="bar-skill-dot"></div>
+					</div>
+					<h3>GESTION DE PROJET</h3>
 					<div class="bar-skill">
 						<div class="bar-skill-progress"></div>
 						<div class="bar-skill-dot"></div>
@@ -93,20 +120,20 @@
 						<i class="fa-solid fa-star"></i>
 						<i class="fa-solid fa-star"></i>
 					</div>
+					<h3>NEERLANDAIS</h3>
+					<div class="stars-container">
+						<i class="fa-solid fa-star text-primary"></i>
+						<i class="fa-solid fa-star text-primary"></i>
+						<i class="fa-solid fa-star text-primary"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+					</div>
 				</div>
 				<div class="block">
 					<h2 class="title-small">SOCIAL</h2>
 					<div class="social-container">
-						<i class="fa-brands fa-twitter"></i>
-						<p>erwan123</p>
-					</div>
-					<div class="social-container">
 						<i class="fa-brands fa-linkedin"></i>
-						<p>erwan123</p>
-					</div>
-					<div class="social-container">
-						<i class="fa-brands fa-facebook"></i>
-						<p>erwan123</p>
+						<p>Pierre Rousseau</p>
 					</div>
 				</div>
 			</aside>
