--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 				<h1><span>P</span>ierre Rousseau</h1>
 				<p>Logistique - Gestion de stock</p>
 				<p>Intégrateur HTML & CSS</p>
+				<a href="./Pizzeria Valentino/index.html"></a>
 			</header>
 			<section class="picture">
 				<img
@@ -271,7 +272,7 @@
 						<h3>Entrez le nom du poste</h3>
 						<p class="text-hint mb-2">le nom de l'entreprise</p>
 						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
+							9Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
 							modi, error iusto enim quos expedita natus aperiam, beatae impedit
 							quisquam tempore unde repellendus provident doloremque vero
 							dolorum velit deleniti corrupti. Natus dolorem recusandae
