--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 				<h1><span>P</span>ierre Rousseau</h1>
 				<p>Logistique - Gestion de stock</p>
 				<p>Intégrateur HTML & CSS</p>
-				<a href="./Pizzeria Valentino/index.html"></a>
 			</header>
 			<section class="picture">
 				<img
@@ -44,6 +43,7 @@
 			<aside>
 				<div class="block">
 					<h2 class="title-small">CONTACT</h2>
+					<a href="../Pizzeria/index.html">PIZZERIA</a>
 					<h3>Téléphone</h3>
 					<p>0499 / 91 . 51 . 56</p>
 					<h3>Email</h3>
