--- a/pizzeria.html
+++ b/pizzeria.html
@@ -47,7 +47,7 @@
 			<main>
 				<h1>Pizzeria Antonio</h1>
 				<p>Cuisine traditionnelle italienne <br />au feu de bois</p>
-				<strong class="city">Italia</strong>
+				<strong class="city"><span>Italia</span></strong>
 			</main>
 			<aside>
 				<h3>
