--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 		<div class="grid-container">
 			<header>
 				<h1><span>P</span>ierre Rousseau</h1>
-				<p>Logistique - Gestion de stock</p>
-				<p>Intégrateur HTML & CSS</p>
+				<p>Création de sites web</p>
 			</header>
 			<section class="picture">
 				<img
@@ -53,14 +52,14 @@
 						4130 Tilff
 					</p>
 				</div>
-				<div class="block">
+				<!-- <div class="block">
 					<h2 class="title-small">EDUCATION</h2>
 					<h3>Bachelier en Marketing</h3>
 					<p>
 						Haute école de la province de Liège <br />
 						2004 - 2007
 					</p>
-				</div>
+				</div> -->
 				<div class="block">
 					<h2 class="title-small">SKILLS</h2>
 					<h3>HTML</h3>
@@ -73,23 +72,23 @@
 						<div class="bar-skill-progress"></div>
 						<div class="bar-skill-dot"></div>
 					</div>
-					<h3>Business Central</h3>
+					<h3>PHOTOSHOP</h3>
 					<div class="bar-skill">
 						<div class="bar-skill-progress"></div>
 						<div class="bar-skill-dot"></div>
 					</div>
-					<h3>SAP</h3>
+					<h3>ILLUSTRATOR</h3>
 					<div class="bar-skill">
 						<div class="bar-skill-progress"></div>
 						<div class="bar-skill-dot"></div>
 					</div>
-					<h3>EASI</h3>
+					<h3>LOGIC PRO STUDIO</h3>
 					<div class="bar-skill">
 						<div class="bar-skill-progress"></div>
 						<div class="bar-skill-dot"></div>
 					</div>
 				</div>
-				<div class="block">
+				<!-- <div class="block">
 					<h2 class="title-small">SOFT-SKILLS</h2>
 					<h3>MANAGEMENT</h3>
 					<div class="bar-skill">
@@ -101,7 +100,7 @@
 						<div class="bar-skill-progress"></div>
 						<div class="bar-skill-dot"></div>
 					</div>
-				</div>
+				</div> -->
 				<div class="block">
 					<h2 class="title-small">LANGUES</h2>
 					<h3>FRANCAIS</h3>
@@ -138,21 +137,39 @@
 				</div>
 			</aside>
 			<main>
-				<h2 class="title-small">PROFIL PROFESSIONNEL</h2>
-				<p class="mb-5">
-					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error
-					architecto modi fugiat explicabo voluptas quis soluta facilis.
-					Distinctio voluptatem a quas, minus optio eveniet officiis rerum
-					corrupti tempora animi illum ducimus consequatur sit fugit sint eum
-					vero doloribus dolore, nisi consectetur. Ipsa culpa aliquam asperiores
-					fugiat reprehenderit sed accusamus beatae esse omnis neque nesciunt,
-					numquam accusantium, qat expedita ullam voluptatem eum neque minima
-					magni eaque architecto sapiente ad accusantium nobis reprehenderit
-					dolor fugit, unde perferendis ipsam?
-				</p>
-				<p class="mb-5">
-					<h1>Portefolio </h1><a href="/pizzeria.html">Pizzeria</a>
-				</p>
+				<section class="intro">
+					<h1>INTRO</h1>
+					<p>
+						Je suis issu d'un milieu proffessionnel très différent de celui du
+						développement web. Ce site est dédié à illustrer, au fur et à mesure
+						du temps, les différentes compétences acquises de manière
+						autodidacte dans le développement web.
+						<br /><br />
+						Mon objectif principal est de prendre du plaisir à atteindre
+						différents objectifs de création et pourquoi pas, à terme, pouvoir
+						créer des vitrines web entreprises.
+						<br /><br />
+						Comme le dit l'adage, un dessin vaut mieux qu'au long discours.
+						Voici donc ci-dessous mon portefolio:
+					</p>
+				</section>
+				<div class="separation"></div>
+				<section class="portefolio">
+					<h1>PORTEFOLIO</h1>
+					<p class="mb-5">
+						Ces sites web sont complètements fictifs, ce ne sont que des layouts
+						ou expériences liées à un type de language.
+					</p>
+					<p class="mb-5">
+						<a
+							class="pf-content"
+							href="/pizzeria.html"
+							><h3>Pizzera Antonio</h3></a
+						>
+					</p>
+				</section>
+				<!-- PARTIE EXPERIENCES PRO
+
 				<p class="mb-5"></p>
 				<h2 class="title-small">EXPERIENCES PROFESSIONNELLES</h2>
 				<div class="experience">
@@ -181,115 +198,7 @@
 							</li>
 						</ul>
 					</div>
-				</div>
-				<div class="experience">
-					<div class="timeline">
-						<p>
-							2017 <br />
-							- <br />
-							2018
-						</p>
-					</div>
-					<div class="content">
-						<h3>Entrez le nom du poste</h3>
-						<p class="text-hint mb-2">le nom de l'entreprise</p>
-						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
-							modi, error iusto enim quos expedita natus aperiam, beatae impedit
-							quisquam tempore unde repellendus provident doloremque vero
-							dolorum velit deleniti corrupti. Natus dolorem recusandae
-							architecto optio at facere laboriosam explicabo eum temporibus,
-							deserunt qui, velit repellendus eos ratione porro eligendi odio!
-						</p>
-						<ul>
-							<li>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
-								ullam.
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="experience">
-					<div class="timeline">
-						<p>
-							2017 <br />
-							- <br />
-							2018
-						</p>
-					</div>
-					<div class="content">
-						<h3>Entrez le nom du poste</h3>
-						<p class="text-hint mb-2">le nom de l'entreprise</p>
-						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
-							modi, error iusto enim quos expedita natus aperiam, beatae impedit
-							quisquam tempore unde repellendus provident doloremque vero
-							dolorum velit deleniti corrupti. Natus dolorem recusandae
-							architecto optio at facere laboriosam explicabo eum temporibus,
-							deserunt qui, velit repellendus eos ratione porro eligendi odio!
-						</p>
-						<ul>
-							<li>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
-								ullam.
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="experience">
-					<div class="timeline">
-						<p>
-							2017 <br />
-							- <br />
-							2018
-						</p>
-					</div>
-					<div class="content">
-						<h3>Entrez le nom du poste</h3>
-						<p class="text-hint mb-2">le nom de l'entreprise</p>
-						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
-							modi, error iusto enim quos expedita natus aperiam, beatae impedit
-							quisquam tempore unde repellendus provident doloremque vero
-							dolorum velit deleniti corrupti. Natus dolorem recusandae
-							architecto optio at facere laboriosam explicabo eum temporibus,
-							deserunt qui, velit repellendus eos ratione porro eligendi odio!
-						</p>
-						<ul>
-							<li>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
-								ullam.
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="experience">
-					<div class="timeline">
-						<p>
-							2017 <br />
-							- <br />
-							2018
-						</p>
-					</div>
-					<div class="content">
-						<h3>Entrez le nom du poste</h3>
-						<p class="text-hint mb-2">le nom de l'entreprise</p>
-						<p>
-							9Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
-							modi, error iusto enim quos expedita natus aperiam, beatae impedit
-							quisquam tempore unde repellendus provident doloremque vero
-							dolorum velit deleniti corrupti. Natus dolorem recusandae
-							architecto optio at facere laboriosam explicabo eum temporibus,
-							deserunt qui, velit repellendus eos ratione porro eligendi odio!
-						</p>
-						<ul>
-							<li>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
-								ullam.
-							</li>
-						</ul>
-					</div>
-				</div>
+				</div> -->
 			</main>
 			<footer>
 				<h2 class="title-small">POUR VOUS RECONTACTER</h2>
