--- a/index.html
+++ b/index.html
@@ -52,14 +52,6 @@
 						4130 Tilff
 					</p>
 				</div>
-				<!-- <div class="block">
-					<h2 class="title-small">EDUCATION</h2>
-					<h3>Bachelier en Marketing</h3>
-					<p>
-						Haute école de la province de Liège <br />
-						2004 - 2007
-					</p>
-				</div> -->
 				<div class="block">
 					<h2 class="title-small">SKILLS</h2>
 					<h3>HTML</h3>
@@ -74,33 +66,15 @@
 					</div>
 					<h3>PHOTOSHOP</h3>
 					<div class="bar-skill">
-						<div class="bar-skill-progress"></div>
-						<div class="bar-skill-dot"></div>
+						<div class="bar-skill-progress-3"></div>
+						<div class="bar-skill-dot-3"></div>
 					</div>
 					<h3>ILLUSTRATOR</h3>
 					<div class="bar-skill">
-						<div class="bar-skill-progress"></div>
-						<div class="bar-skill-dot"></div>
-					</div>
-					<h3>LOGIC PRO STUDIO</h3>
-					<div class="bar-skill">
-						<div class="bar-skill-progress"></div>
-						<div class="bar-skill-dot"></div>
+						<div class="bar-skill-progress-3"></div>
+						<div class="bar-skill-dot-3"></div>
 					</div>
 				</div>
-				<!-- <div class="block">
-					<h2 class="title-small">SOFT-SKILLS</h2>
-					<h3>MANAGEMENT</h3>
-					<div class="bar-skill">
-						<div class="bar-skill-progress"></div>
-						<div class="bar-skill-dot"></div>
-					</div>
-					<h3>GESTION DE PROJET</h3>
-					<div class="bar-skill">
-						<div class="bar-skill-progress"></div>
-						<div class="bar-skill-dot"></div>
-					</div>
-				</div> -->
 				<div class="block">
 					<h2 class="title-small">LANGUES</h2>
 					<h3>FRANCAIS</h3>
@@ -160,44 +134,12 @@
 						Ces sites web sont complètements fictifs, ce ne sont que des layouts
 						ou expériences liées à un type de language.
 					</p>
-
 					<a
 						class="pf-content"
 						href="/pizzeria.html"
 						><h4>Pizzera Antonio</h4></a
 					>
 				</section>
-				<!-- PARTIE EXPERIENCES PRO
-
-				<p class="mb-5"></p>
-				<h2 class="title-small">EXPERIENCES PROFESSIONNELLES</h2>
-				<div class="experience">
-					<div class="timeline">
-						<p>
-							2017 <br />
-							- <br />
-							2018
-						</p>
-					</div>
-					<div class="content">
-						<h3>Entrez le nom du poste</h3>
-						<p class="text-hint mb-2">le nom de l'entreprise</p>
-						<p>
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam
-							modi, error iusto enim quos expedita natus aperiam, beatae impedit
-							quisquam tempore unde repellendus provident doloremque vero
-							dolorum velit deleniti corrupti. Natus dolorem recusandae
-							architecto optio at facere laboriosam explicabo eum temporibus,
-							deserunt qui, velit repellendus eos ratione porro eligendi odio!
-						</p>
-						<ul>
-							<li>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
-								ullam.
-							</li>
-						</ul>
-					</div>
-				</div> -->
 			</main>
 			<footer>
 				<h2 class="title-small">POUR VOUS RECONTACTER</h2>
