--- a/pizzeria.html
+++ b/pizzeria.html
@@ -66,5 +66,9 @@
 				<div class="separation-vp"></div>
 			</aside>
 		</section>
+		<section class="avis">
+			<h1>Avis de nos clients</h1>
+			<a href="#">Soyez le premier à donner votre avis</a>
+		</section>
 	</body>
 </html>
