--- a/pizzeria.html
+++ b/pizzeria.html
@@ -40,7 +40,7 @@
 			<section class="menu">
 				<a href="/index.html">Accueil</a>
 				<a href="#">Carte</a>
-				<a href="#">Contact</a>
+				<a href="#contact">Contact</a>
 			</section>
 		</header>
 		<section class="vp">
@@ -69,6 +69,67 @@
 		<section class="avis">
 			<h1>Avis de nos clients</h1>
 			<a href="#">Soyez le premier à donner votre avis</a>
+		</section>
+		<section
+			class="contact"
+			id="contact">
+			<div class="clock">
+				<h2><i class="fa-solid fa-clock"> </i> Heures d'ouvertures</h2>
+				<div class="clock-content">
+					<div class="day">
+						<p>Mardi</p>
+						<p>17:30-22:00</p>
+					</div>
+					<div class="day">
+						<p>Mercredi</p>
+						<p>17:30-22:00</p>
+					</div>
+					<div class="day">
+						<p>Jeudi</p>
+						<p>17:30-22:00</p>
+					</div>
+					<div class="day">
+						<p>Vendredi</p>
+						<p>17:30-22:00</p>
+					</div>
+					<div class="day">
+						<p>Samedi</p>
+						<p>17:30-22:00</p>
+					</div>
+					<div class="day">
+						<p>Dimanche</p>
+						<p>17:30-22:00</p>
+					</div>
+				</div>
+			</div>
+			<div class="service">
+				<h2><i class="fa-solid fa-utensils"></i> Service</h2>
+				<div class="service-content">
+					<div class="service-item">
+						<h3><i class="fa-solid fa-chair"></i> Nombre de places</h3>
+						<p>"xx" places assises. Sous réservation</p>
+					</div>
+					<div class="service-item">
+						<h3><i class="fa-solid fa-cart-shopping"></i>A emporter</h3>
+						<p>Toutes nos commandes sont disponibles en "xx" minutes</p>
+					</div>
+					<div class="service-item">
+						<h3>
+							<i class="fa-solid fa-truck-fast"></i> Livraisons à domicile
+						</h3>
+						<p>
+							Livraisons à domicile dans un rayon de "xx" km. <br />
+							<span>Forfait de "xx"€. Gratuit à partir de "xx"€</span>
+						</p>
+					</div>
+					<div class="service-item">
+						<h3>
+							<i class="fa-solid fa-charging-station"></i> Bornes de recharge
+						</h3>
+						<p>Bornes de rechage disponibles sur notre parking privé</p>
+					</div>
+				</div>
+			</div>
 		</section>
 	</body>
 </html>
