--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 						du temps, les différentes compétences acquises de manière
 						autodidacte dans le développement web.
 						<br /><br />
-						Mon objectif principal est de prendre du plaisir à atteindre
-						différents objectifs de création et pourquoi pas, à terme, pouvoir
-						créer des vitrines web entreprises.
+						Mon but principal est de prendre du plaisir à atteindre différents
+						objectifs de création et pourquoi pas, à terme, pouvoir créer des
+						vitrines web entreprises.
 						<br /><br />
 						Comme le dit l'adage, un dessin vaut mieux qu'au long discours.
 						Voici donc ci-dessous mon portefolio:
