--- a/pizzeria.html
+++ b/pizzeria.html
@@ -39,7 +39,7 @@
 			</div>
 			<section class="menu">
 				<a href="/index.html">Accueil</a>
-				<a href="#">Carte</a>
+				<a href="#carte">La carte</a>
 				<a href="#contact">Contact</a>
 			</section>
 		</header>
@@ -51,8 +51,8 @@
 			</main>
 			<aside>
 				<h3>
-					<span>N</span>otre <br />
-					<span class="histoire">histoire</span>
+					<span>N</span>OTRE <br />
+					<span class="histoire">HISTOIRE</span>
 				</h3>
 				<div class="separation-vp"></div>
 				<h4>Lorem, ipsum.</h4>
@@ -73,63 +73,70 @@
 		<section
 			class="contact"
 			id="contact">
+			<div class="service">
+				<h2>Services</h2>
+				<div class="service-content">
+					<p><strong>Service à table</strong> - sur réservation -</p>
+					<p><strong>A emporter</strong> - prêt en '' minutes -</p>
+					<p>
+						<strong>Livraisons à domicile</strong> - Dans un rayon de '' km -
+					</p>
+				</div>
+			</div>
 			<div class="clock">
-				<h2><i class="fa-solid fa-clock"> </i> Heures d'ouvertures</h2>
-				<div class="clock-content">
-					<div class="day">
-						<p>Mardi</p>
-						<p>17:30 - 22:00</p>
+				<h2>Horaires</h2>
+				<div class="day">
+					<div class="jour">
+						Lundi <br />
+						Mardi <br />
+						Mercredi <br />
+						Jeudi <br />
+						Vendredi <br />
+						Samedi <br />
+						Dimanche <br />
 					</div>
-					<div class="day">
-						<p>Mercredi</p>
-						<p>17:30 - 22:00</p>
-					</div>
-					<div class="day">
-						<p>Jeudi</p>
-						<p>17:30 - 22:00</p>
-					</div>
-					<div class="day">
-						<p>Vendredi</p>
-						<p>17:30 - 22:00</p>
-					</div>
-					<div class="day">
-						<p>Samedi</p>
-						<p>17:30 - 22:00</p>
-					</div>
-					<div class="day">
-						<p>Dimanche</p>
-						<p>17:30 - 22:00</p>
+					<div class="heure">
+						Fermé
+						<br />
+						17h30 - 22h00
+						<br />
+						17h30 - 22h00
+						<br />
+						17h30 - 22h00
+						<br />
+						17h30 - 22h00
+						<br />
+						17h30 - 22h00
+						<br />
+						17h30 - 22h00
 					</div>
 				</div>
 			</div>
-			<div class="service">
-				<h2><i class="fa-solid fa-utensils"></i> Service</h2>
-				<div class="service-content">
-					<div class="service-item">
-						<h3><i class="fa-solid fa-chair"></i> Nombre de places</h3>
-						<p>"xx" places assises. Sous réservation</p>
-					</div>
-					<div class="service-item">
-						<h3><i class="fa-solid fa-cart-shopping"></i>A emporter</h3>
-						<p>Toutes nos commandes sont disponibles en "xx" minutes</p>
-					</div>
-					<div class="service-item">
-						<h3>
-							<i class="fa-solid fa-truck-fast"></i> Livraisons à domicile
-						</h3>
-						<p>
-							Livraisons à domicile dans un rayon de "xx" km. <br />
-							<span>Forfait de "xx"€. Gratuit à partir de "xx"€</span>
-						</p>
-					</div>
-					<div class="service-item">
-						<h3>
-							<i class="fa-solid fa-charging-station"></i> Bornes de recharge
-						</h3>
-						<p>Bornes de rechage disponibles sur notre parking privé</p>
-					</div>
+			<div class="map">
+				<h2>Nous trouver</h2>
+				<div class="google">
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2534.4361947033126!2d5.5886898769559865!3d50.56325407923466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c0f7ea5e7ca7a7%3A0xeda26c0897aa4e90!2sClos%20des%20Sources%2016%2C%204130%20Esneux!5e0!3m2!1sen!2sbe!4v1706814858177!5m2!1sen!2sbe"
+						width="600"
+						height="450"
+						style="border: 0"
+						allowfullscreen=""
+						loading="lazy"
+						referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
 		</section>
+		<section
+			class="carte"
+			id="carte">
+			<h1>LE MENU</h1>
+			<img
+				src="/img/36100.jpg"
+				alt="Menu Pizza" />
+		</section>
+		<footer>
+			<p>Site fictif à but visuel</p>
+			<p>Copyright Pierre Rousseau</p>
+		</footer>
 	</body>
 </html>
