--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						objectifs de création et pourquoi pas, à terme, pouvoir créer des
 						vitrines web entreprises.
 						<br /><br />
-						Comme le dit l'adage, un dessin vaut mieux qu'au long discours.
+						Comme le dit l'adage, un dessin vaut mieux qu'un long discours.
 						Voici donc ci-dessous mon portefolio:
 					</p>
 				</section>
