--- a/pizzeria.html
+++ b/pizzeria.html
@@ -116,6 +116,7 @@
 			<div class="map">
 				<h2>Nous trouver</h2>
 				<div class="google">
+					<p>ADRESSE: <br />Rue fond du bois 666 <br />6000 Gravière</p>
 					<iframe
 						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2534.4361947033126!2d5.5886898769559865!3d50.56325407923466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c0f7ea5e7ca7a7%3A0xeda26c0897aa4e90!2sClos%20des%20Sources%2016%2C%204130%20Esneux!5e0!3m2!1sen!2sbe!4v1706814858177!5m2!1sen!2sbe"
 						width="600"
@@ -125,6 +126,10 @@
 						loading="lazy"
 						referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
+			</div>
+			<div class="appel">
+				<h2>Nous appeler</h2>
+				<p><a href="+32 499 99 99 99">+32 499 99 99 99</a></p>
 			</div>
 		</section>
 		<section
