--- a/pizzeria.html
+++ b/pizzeria.html
@@ -129,7 +129,7 @@
 			</div>
 			<div class="appel">
 				<h2>Nous appeler</h2>
-				<p><a href="+32 499 99 99 99">+32 499 99 99 99</a></p>
+				<p><a href="tel:+324999999">+32 499 99 99 99</a></p>
 			</div>
 		</section>
 		<section
