--- a/pizzeria.html
+++ b/pizzeria.html
@@ -67,10 +67,7 @@
 				<div class="separation-vp"></div>
 			</aside>
 		</section>
-		<section class="avis">
-			<h1>Avis de nos clients</h1>
-			<a href="#">Soyez le premier à donner votre avis</a>
-		</section>
+
 		<section
 			class="contact"
 			id="contact">
@@ -129,8 +126,12 @@
 			</div>
 			<div class="appel">
 				<h2>Nous appeler</h2>
-				<p><a href="tel:+324999999">+32 499 99 99 99</a></p>
+				<p><a href="tel:+32493915156">+32 493 91 51 56</a></p>
 			</div>
+		</section>
+		<section class="avis">
+			<h1>Avis de nos clients</h1>
+			<a href="#">Soyez le premier à donner votre avis</a>
 		</section>
 		<section
 			class="carte"
@@ -142,7 +143,7 @@
 		</section>
 		<footer>
 			<p>Site fictif à but visuel</p>
-			<p>Copyright Pierre Rousseau</p>
+			<p>©Copyright Pierre Rousseau</p>
 		</footer>
 	</body>
 </html>
